--- a/MyEMSApp/app.json
+++ b/MyEMSApp/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "my-new-app",
-    "slug": "my-new-app",
+    "name": "MyEMSApp",
+    "slug": "MyEMSApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
