--- a/MyEMSApp/package.json
+++ b/MyEMSApp/package.json
@@ -18,15 +18,21 @@
     "lucide-react-native": "^0.514.0",
     "react": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "react-native-shared-element": "^0.8.9",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "@react-native-community/cli": "latest"
+    
   },
   "private": true
 }
