--- a/MyEMSApp/package.json
+++ b/MyEMSApp/package.json
@@ -24,7 +24,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-shared-element": "^0.8.9",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -32,7 +33,6 @@
     "@types/react-native": "^0.72.8",
     "typescript": "~5.8.3",
     "@react-native-community/cli": "latest"
-    
   },
   "private": true
 }
